--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,171 @@
-.App {
-  text-align: center;
+*{
+  background-color:#68148f;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color:#68148f;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Main bubbles */
+
+.bubble-holder{
+  width:100%;
+  height: 1000px;
+  position: relative;
+  overflow:hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bubble-1 {
+  left: 8%;
+  animation-delay: 1s;
+}
+.bubble-1 .bubble-animation-y{
+  animation-duration: 7s;
+  animation-delay: 0s;
 }
 
-.App-link {
-  color: #61dafb;
+.bubble-2 {
+  left: 40%;
+  animation-delay: 2s;
+}
+.bubble-2 .bubble-animation-y{
+  animation-duration: 6s;
+  animation-delay: 2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bubble-3 {
+  right: 15%;
+  animation-delay: 1s;
+}
+.bubble-3 .bubble-animation-y{
+  animation-duration: 5s;
+  animation-delay: 1.5s;
+}
+
+.bubble-4 {
+  left: 8%; 
+  animation-delay: 2s;
+}
+.bubble-4 .bubble-animation-y{
+  animation-duration: 6s;
+  animation-delay: 3s;
+}
+
+.bubble-5 {
+  left: 40%; 
+  animation-delay: 1s;
+}
+.bubble-5 .bubble-animation-y{
+  animation-duration: 5s;
+  animation-delay: 0;
+}
+
+.bubble-6 {
+  left: 45%;
+  animation-delay: 2s;
+}
+.bubble-6 .bubble-animation-y{
+  animation-duration: 7s;
+  animation-delay: 3.5s;
+}
+
+.bubble-7 {
+  right: 15%;
+  animation-delay: 1s;
+}
+.bubble-7 .bubble-animation-y{
+  animation-duration: 5.5s;
+  animation-delay: 3s;
+}
+
+.bubble-8 {
+  right: 5%;
+  animation-delay: 2s;
+}
+.bubble-8 .bubble-animation-y{
+  animation-duration: 7s;
+  animation-delay: 3s;
+}
+
+
+/* Static Circles */
+
+.bubble-static {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background-color: #3b0646;
+  position: absolute;
+}
+
+.bubble-9 {
+  top: -375px;
+  left: 14%;  
+}
+
+.bubble-10 {
+  bottom: -350px;
+  right: -50px;	
+}
+
+.bubble-container{
+  position: absolute;
+  bottom: -250px; 
+}
+
+.bubble-large, .bubble-small {
+  border-radius: 100%;  
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1), 
+  inset 0px 10px 30px 5px rgba(96, 147, 195, 1);
+}
+
+.bubble-large { 
+  border: 7px solid #58058f;  
+  width: 231px;
+  height: 231px;
+}
+
+.bubble-small {
+  border: 5px solid #8f056d;
+  width: 82px;
+  height: 82px;
+}
+
+.bubble-animation-x { 
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-name: bubbleXAnimFrames;
+  animation-timing-function: ease;
+  animation-direction: alternate;
+}
+
+.bubble-animation-y { 
+  animation-iteration-count: infinite;
+  animation-name: bubbleYAnimFrames;
+  animation-timing-function: linear;
+}
+
+
+ @keyframes bubbleXAnimFrames {
+  0% {
+    transform: translateX(0);
+   }
+  100% {
+    transform: translateX(50px);
+   }
+}
+
+ @keyframes bubbleYAnimFrames {
+  0% {
+    transform: translateY(0);
+   }
+  50% {
+    opacity: 85%;
+   }
+  100% {
+    transform: translateY(-1250px);
+    opacity: 0;
+   }
 }
