--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -4,12 +4,14 @@
   width: 100px;
   height: 200px;
   margin: auto;
+  justify-content: center;
   
 }
 
 .slides {
-  width: 300px;
-  height: 200px;
+  width: 900px;
+  height: 250px;
   border-radius: 4px;
+  justify-content: center;
 }
 
