--- a/src/components/content/Content.css
+++ b/src/components/content/Content.css
@@ -12,7 +12,7 @@ img {
 
 iframe {
   width: 600px;
-  height: 300px;
+  height: 280px;
   border: 1px solid rgba(255, 0, 0, .5);
   border-radius: 10px 10px;
 }
@@ -38,10 +38,10 @@ iframe {
 .btn {
   position: relative;
   margin-top: -70px;
-  margin-left: 1000px;
+  margin-left: 970px;
 }
 
-/* 
+
 @media (max-width: 800px) {
 	.column {
 		flex: 50%;
@@ -55,4 +55,4 @@ iframe {
 		flex: 100%;
 		max-width: 100%;
 	}
-} */
+}
