--- a/src/components/advertise/Advertise.css
+++ b/src/components/advertise/Advertise.css
@@ -4,11 +4,7 @@
   margin-bottom: 60px;
 }
 
-.card {
- width: 20px;
-}
-
-col1 {
-  width: 100px;
-  height: 100px;
+.img {
+  width: 300px;
+  height: 300px;
 }
