--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -11,7 +11,7 @@
 .slides {
   width: 900px;
   height: 250px;
-  border-radius: 4px;
+  border: 1px solid rgba(234, 0, 255, 0.5);
+  border-radius: 10px 10px;
   justify-content: center;
 }
-
